feat(workers): Return Release Version on worker list and read (#2377)
* Return Release Version on worker list and read
