# internal/daemon/cluster/handlers/worker_service.go
@@ -96,7 +96,8 @@ func (ws *workerServiceServer) Status(ctx context.Context, req *pbs.StatusReques
 		server.WithName(wStat.GetName()),
 		server.WithDescription(wStat.GetDescription()),
 		server.WithAddress(wStat.GetAddress()),
-		server.WithWorkerTags(workerTags...))
+		server.WithWorkerTags(workerTags...),
+		server.WithReleaseVersion(wStat.ReleaseVersion))
 	opts := []server.Option{server.WithUpdateTags(req.GetUpdateTags())}
 	if wStat.GetPublicId() != "" {
 		opts = append(opts, server.WithPublicId(wStat.GetPublicId()))
